# cathedralconfidential

./: .dockerignore  .gitignore  BUILD_SPEC.md  BUILD_STATUS.md  HANDOFF.md  LICENSE  MINING.md  README.md  RUNTEST.md  pyproject.toml
.github/ISSUE_TEMPLATE/: miner-beta.yml
.github/workflows/: ci.yml
cathedral/: __init__.py  api.py  assurance.py  cc_gpu.py  census.py  channel.py  cli.py  common.py  economics.py  enroll.py  gpu.py  key_release.py  ledger.py  lifecycle.py  policy_registry.py  poster.py  prober.py  receipt.py  remote.py  runtime.py  score_audience.py  score_class.py  trustee.py  worker.py  workload.py
cathedral/attest/: __init__.py
cathedral/lanes/: __init__.py  sat.py  sat_types.py
cathedral/neuron/: miner.py  validator.py
cathedral/verify/: __init__.py  mock.py  snp.py  tdx_quote.py
cmd/cathedral-confidential-space/: go.mod
cmd/cathedral-confidential-space/cmd/collector/: isolation_linux.go  isolation_other.go  main.go  run.go
cmd/cathedral-confidential-space/cmd/kbs/: main.go  main_test.go
cmd/cathedral-confidential-space/cmd/stage-input/: main.go
cmd/cathedral-confidential-space/cmd/verifier/: artifacts.go  launch_export.go  launch_export_test.go  main.go  policy.go  (+2 more)
cmd/cathedral-confidential-space/testdata/: control_objects.fixture.json
cmd/cathedral-tdx-verifier/: go.mod  go.sum  main.go  main_test.go  open_quote_linux.go  open_quote_linux_test.go  open_quote_other.go  stdout_other.go  stdout_unix.go
docs/: ASSURANCE.md  CC_GPU_LAUNCH_SCORECARD.md  CC_GPU_VERIFIER.md  CC_GPU_WORKER.md  DESIGN.md  GPU_ATTESTATION.md  KEY_RELEASE.md  LIFECYCLE.md  MINER_ONBOARDING.md  POLICY_REGISTRY.md  RECEIPTS.md  TDX_LAUNCH.md  THIN_SUBNET_INTEGRATION.md  WORKLOAD_ADMISSION.md
examples/policy-registry/: registry-v1.json  trusted-keys.json
proto/: evidence.proto
runtime/: Dockerfile  cathedral-job  smoke-container.sh
scripts/: cross_repo_launch_verify.py  demo_sat.py  tdx_cpu_launch_canary.py  tdx_verifier_digest.py  tdx_verify_json.py  thin_subnet_e2e.py
tests/: tdx_quote_fixtures.py  test_api.py  test_assurance.py  test_attest_snp_hw.py  test_attest_tdx_hw.py  test_attest_tdx_negative.py  test_attest_tdx_padding.py  test_attested_epoch.py  test_attested_epoch_isolation.py  test_binding.py  test_cc_gpu.py  test_cc_gpu_fixed_runtime.py  test_census.py  test_channel_binding.py  test_cli.py  test_cross_repo_launch_verify.py  test_customer_jobs.py  test_economics.py  test_enroll.py  test_enrollment_hardening.py  test_error_sanitization.py  test_gpu.py  test_key_release.py  test_ledger_and_poster.py  test_lifecycle.py  test_policy_registry.py  test_pretty_output.py  test_prober.py  test_receipt.py  test_runtime.py  test_sat_credit_validity.py  test_sat_lane.py  test_skeleton.py  test_tdx_cpu_launch_canary.py  test_tdx_quote_parser.py  test_tdx_sat_e2e_hw.py  test_tdx_verify_json_script.py  test_tdx_verify_strict.py  test_trustee.py  test_verify_mock.py  (+4 more)
tests/fixtures/: assurance-receipt-v1.json  assurance-receipt-v2.json
(+13 files in other folders)
