[project]
name = "cathedral"
version = "0.0.0"
description = "Confidential compute subnet (SN39): attestation is admission, verified work is currency"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # No direct bittensor SDK here: cathedralai/cathedral remains the sole
  # weight-setting scorer, and this repo stays the confidential sidecar.
  # "bittensor>=8.0",
]

[project.optional-dependencies]
# stdlib-only runtime; third-party packages are used only for development and tests.
dev = ["pytest>=8.0", "substrate-interface>=1.7.0"]

[project.scripts]
cathedral = "cathedral.cli:main"
cathedral-census = "cathedral.census:main"
# Compatibility wrappers into the operator CLI; they do not add chain logic.
cathedral-validator = "cathedral.neuron.validator:main"
cathedral-miner = "cathedral.neuron.miner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
