[project]
name = "cathedral"
version = "0.0.0"
description = "Confidential compute subnet (SN39): attestation is admission, verified work is currency"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # This service publishes a signed score stream. The existing Cathedral
  # validator owns metagraph mapping and on-chain weight submission.
]

[project.optional-dependencies]
# stdlib-only runtime; third-party packages are used only for development and tests.
dev = ["pytest>=8.0", "substrate-interface>=1.7.0"]

[project.scripts]
cathedral = "cathedral.cli:main"
cathedral-census = "cathedral.census:main"
# Operator aliases for the worker and score-publication runtime.
cathedral-validator = "cathedral.neuron.validator:main"
cathedral-miner = "cathedral.neuron.miner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
