[project]
name = "cathedral"
version = "0.0.0"
description = "Confidential compute subnet (SN39): attestation is admission, verified work is currency"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # Public policy registries use audited Ed25519 primitives rather than a
  # project-local signature implementation.
  "cryptography>=42.0",
]

[project.optional-dependencies]
# Additional validator-chain and test tooling.
dev = ["pytest>=8.0", "substrate-interface>=1.7.0"]

[project.scripts]
cathedral = "cathedral.cli:main"
cathedral-census = "cathedral.census:main"
# Operator aliases for the worker and score-publication runtime.
cathedral-validator = "cathedral.neuron.validator:main"
cathedral-miner = "cathedral.neuron.miner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
